; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/synctex/extr_synctex_parser_utils.c__synctex_last_path_component.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/synctex/extr_synctex_parser_utils.c__synctex_last_path_component.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @_synctex_last_path_component(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call i32 @strlen(i8* %6)
  %8 = sext i32 %7 to i64
  %9 = getelementptr inbounds i8, i8* %5, i64 %8
  store i8* %9, i8** %4, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = load i8*, i8** %3, align 8
  %12 = icmp ugt i8* %10, %11
  br i1 %12, label %13, label %37

13:                                               ; preds = %1
  %14 = load i8*, i8** %4, align 8
  %15 = load i8, i8* %14, align 1
  %16 = call i64 @SYNCTEX_IS_PATH_SEPARATOR(i8 signext %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %35, label %18

18:                                               ; preds = %13
  br label %19

19:                                               ; preds = %30, %18
  %20 = load i8*, i8** %4, align 8
  %21 = getelementptr inbounds i8, i8* %20, i32 -1
  store i8* %21, i8** %4, align 8
  %22 = load i8*, i8** %4, align 8
  %23 = load i8, i8* %22, align 1
  %24 = call i64 @SYNCTEX_IS_PATH_SEPARATOR(i8 signext %23)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %29

26:                                               ; preds = %19
  %27 = load i8*, i8** %4, align 8
  %28 = getelementptr inbounds i8, i8* %27, i64 1
  store i8* %28, i8** %2, align 8
  br label %39

29:                                               ; preds = %19
  br label %30

30:                                               ; preds = %29
  %31 = load i8*, i8** %4, align 8
  %32 = load i8*, i8** %3, align 8
  %33 = icmp ugt i8* %31, %32
  br i1 %33, label %19, label %34

34:                                               ; preds = %30
  br label %35

35:                                               ; preds = %34, %13
  %36 = load i8*, i8** %4, align 8
  store i8* %36, i8** %2, align 8
  br label %39

37:                                               ; preds = %1
  %38 = load i8*, i8** %4, align 8
  store i8* %38, i8** %2, align 8
  br label %39

39:                                               ; preds = %37, %35, %26
  %40 = load i8*, i8** %2, align 8
  ret i8* %40
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i64 @SYNCTEX_IS_PATH_SEPARATOR(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
